inserting REST API in client

--- a/flight-booking-portal/src/app/search-flights/search-flights.component.html
+++ b/flight-booking-portal/src/app/search-flights/search-flights.component.html
@@ -46,7 +46,7 @@
         <input class="form-control" type="number" plaholder="1" />
 
         <div class="input-group-text">Passengers</div>
-        <button type="submit" class="btn btn-primary">
+        <button (click)="search()" type="submit" class="btn btn-primary">
           <i class="fas fa-search"></i>
         </button>
       </div>
@@ -54,7 +54,7 @@
   </div>
 </div>
 
-<div *ngFor="let flight of searchResult">
+<div *ngFor="let flight of searchResults">
   <div class="card text-dark mt-5 text-center">
     <div class="card-body" style="padding: 20px; background-color: #e5ecf26e;">
       <h6 class="card-title">{{ flight.airline }}</h6>
@@ -72,18 +72,18 @@
 
             <div class="col">
               <i class="fa-solid fa-location-dot">
-                {{ flight.departure.place }}
+                {{ flight.departure?.place }}
               </i>
             </div>
 
             <div class="col m-2">
               <i class="fa-regular"></i>
-              {{ flight.departure.time | date }}
+              {{ flight.departure?.time | date }}
             </div>
 
             <div class="col">
               <i class="fa-regular fa-clock"></i>
-              {{ flight.departure.time | date: 'shortTime' }}
+              {{ flight.departure?.time | date: 'shortTime' }}
             </div>
           </div>
 
@@ -109,18 +109,18 @@
 
             <div class="col">
               <i class="fa-solid fa-location-dot">
-                {{ flight.arrival.place }}
+                {{ flight.arrival?.place }}
               </i>
             </div>
 
             <div class="col m-2">
               <i class="fa-regular"></i>
-              {{ flight.arrival.time | date }}
+              {{ flight.arrival?.time | date }}
             </div>
 
             <div class="col">
               <i class="fa-regular fa-clock"></i>
-              {{ flight.arrival.time | date: 'shortTime' }}
+              {{ flight.arrival?.time | date: 'shortTime' }}
             </div>
           </div>
         </div>
