centering data storage and creating domain layer

--- a/flight-booking-portal/src/app/book-flight/book-flight.component.html
+++ b/flight-booking-portal/src/app/book-flight/book-flight.component.html
@@ -82,4 +82,8 @@
       </div>
     </form>
   </div>
+
+  <div *ngIf="form.controls.number.invalid" class="invalid-feedback d-block">
+    Number of seats is required
+  </div>
 </ng-container>
