--- a/flight-booking-portal/src/app/search-flights/search-flights.component.html
+++ b/flight-booking-portal/src/app/search-flights/search-flights.component.html
@@ -2,19 +2,19 @@
 
   <h5 class="text-md-center m-5">Search for Flights</h5>
 
-  <div>
+  <form [formGroup]="form" (ngSubmit)="search()">
     <div class="m-5 d-grid gap-3">
       <div class="row">
         <div class="col">
           <div class="form-floating">
-            <input placeholder="From" class="form-control" />
+            <input formControlName="from" placeholder="From" class="form-control" />
             <label class="text-primary form-label">From</label>
           </div>
         </div>
 
         <div class="col">
           <div class="form-floating">
-            <input placeholder="Destination" class="form-control" />
+            <input formControlName="destination" placeholder="Destination" class="form-control" />
             <label class="text-primary form-label">Destination</label>
           </div>
         </div>
@@ -23,14 +23,14 @@
       <div class="row">
         <div class="col">
           <div class="form-floating">
-            <input type="date" placeholder="From Date" class="form-control" />
+            <input formControlName="fromDate" type="date" placeholder="From Date" class="form-control" />
             <label class="text-primary form-label">From Date</label>
           </div>
         </div>
 
         <div class="col">
           <div class="form-floating">
-            <input type="date" placeholder="To Date" class="form-control" />
+            <input formControlName="toDate" type="date" placeholder="To Date" class="form-control" />
             <label class="text-primary form-label">To Date</label>
           </div>
         </div>
@@ -46,18 +46,17 @@
         <div class="col">
           <div class="input-group">
             <div class="input-group-text">For</div>
-            <input class="form-control" type="number" placeholder="1" />
+            <input formControlName="numberOfPassengers" class="form-control" type="number" placeholder="1" />
             <div class="input-group-text">Passengers</div>
 
-            <button (click)="search()" type="submit" class="btn-primary btn">
+            <button type="submit" class="btn-primary btn">
               <i class="fas fa-search"></i>
             </button>
           </div>
         </div>
       </div>
-
     </div>
-  </div>
+  </form>
 
   <div *ngFor="let flight of vm.searchResult">
     <div class="card text-dark mt-5 text-center">
